added types and tests

--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "license": "MIT",
   "types": "index.d.ts",
   "dependencies": {
+    "argon2": "^0.28.5",
     "fastify-plugin": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.8",
+    "fastify": "^3.27.4",
     "fastify-tsconfig": "^1.0.1",
     "standard": "^16.0.4",
     "tap": "^15.1.6",
