--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
         # uses: pnpm/action-setup@35ab4267a1a21c8e8cb1c087cf1642e891ff57bd
       uses: pnpm/action-setup@v2.2.1
       with:
+        version: latest
         run_install: true
     - name: Test
       run: pnpm test
