--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
       uses: pnpm/action-setup@v2.2.1
       with:
         version: latest
-        run_install: true
+        run_install: |
+          - recursive: true
+            args: [--frozen-lockfile, --strict-peer-dependencies]
     - name: Test
       run: pnpm test
